# server.js
@@ -7,6 +7,7 @@ const opn = require('opn')
 
 // create express app
 const app = express();
+const expressSwagger = require('express-swagger-generator')(app);
 
 // parse application/x-www-form-urlencoded
 app.use(bodyParser.urlencoded({ extended: true }))
@@ -35,7 +36,6 @@ app.get('/', (req, res) => {
     res.json({ "message": "Welcome to the Data provider service. Creating a new dataprovider msg. Organise and and store cusotmer dataprovider details." });
 });
 
-require('./app/routes/dataprovider.routes.js')(app);
 require('./app/routes/registeruser.routes.js')(app);
 
 app.all('', function(req, res, next) {
@@ -46,11 +46,40 @@ app.all('', function(req, res, next) {
 });
 
 
-app.use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerDocument));
+//app.use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerDocument));
 
-opn('http://localhost:4020/api-docs')
+const port = 4020;
+let options = {
+    swaggerDefinition: {
+        info: {
+            description: 'This is a sample server',
+            title: 'Swagger',
+            version: '1.0.0',
+        },
+        host: 'localhost:' + port,
+        basePath: '',
+        produces: [
+            "application/json",
+            "application/xml"
+        ],
+        schemes: ['http', 'https'],
+        securityDefinitions: {
+            JWT: {
+                type: 'apiKey',
+                in: 'header',
+                name: 'Authorization',
+                description: "",
+            }
+        }
+    },
+    basedir: __dirname, //app absolute path
+    files: ['./app/routes/registeruser.routes.js'] //Path to the API handle folder
+};
+
+expressSwagger(options)
+opn('http://localhost:' + port + '/api-docs')
 
 // listen for requests
-app.listen(4020, () => {
-    console.log("Server is listening on port 4020");
+app.listen(port, () => {
+    console.log("Server is listening on port " + port);
 });
